# registry

./: .gitignore  Makefile  README.md  docker-compose.yml  minio.license
cpp/: .gitignore  Makefile  README.md  conanfile.py  meson.build  meson_options.txt
cpp/src/: main.cpp
init/: policy-personal.json  policy-readonly.json  policy-shared.json
python/: bucket_demo.py  personal_folder_demo.py  requirements.txt
